differenciated AR content and select query by camera model

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body ng-app="starter">
-    <ion-nav-bar class="bar-dark">
+    <ion-nav-bar class="bar-dark" align-title="center"> <!--align-title zum zentrieren des Titels verwendet, da es nicht von alleine funktioniert hat-->
       <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
