--- a/www/wikitude-worlds/D3300-getting-started/index.html
+++ b/www/wikitude-worlds/D3300-getting-started/index.html
@@ -10,7 +10,7 @@
     <script src="architect://architect.js"></script>
     <script type="text/javascript" src="../ade.js"></script>
 
-    <link rel="stylesheet" href="css/default.css">
+  <link rel="stylesheet" href="../AR-css/default.css">
 </head>
 
 <body>
