--- a/www/wikitude-worlds/D5200-shoot-aperture-mode/index.html
+++ b/www/wikitude-worlds/D5200-shoot-aperture-mode/index.html
@@ -7,7 +7,7 @@
 
     <title></title>
 
-    <script src="https://www.wikitude.com/libs/architect.js"></script>
+    <script src="architect://architect.js"></script>
     <script type="text/javascript" src="../ade.js"></script>
 
   <link rel="stylesheet" href="../AR-css/default.css">
@@ -16,6 +16,7 @@
 <body>
     <div id="loadingMessage" class="info">Loading ...</div>
 
-    <script src="js/imagerecognitionand3d.js"></script>
+    <script src="js/htmldrawable.js"></script>
 </body>
 </html>
+
