--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700,900' rel='stylesheet' type='text/css'>
+
   <title></title>
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -14,10 +16,34 @@
 
   <script src="cordova.js"></script><!-- cordova script (this will be a 404 during development) -->
   <script src="lib/ionicitude/dist/ionicitude.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDfJWwC2rH2Tn-3cqSMVb4eUH0AAGGXlBk",
+      authDomain: "arua-bfd13.firebaseapp.com",
+      databaseURL: "https://arua-bfd13.firebaseio.com",
+      projectId: "arua-bfd13",
+      storageBucket: "",
+      messagingSenderId: "349215131559"
+    };
+    firebase.initializeApp(config);
+  </script>
+  <script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
+
   <script src="js/app.js"></script><!-- tha app's js -->
+  <script src="js/services/authentication.js"></script>
+  <script src="js/controllers/registration.js"></script>
+  <script src="js/controllers/success.js"></script>
 </head>
 
 <body ng-app="starter">
+<!--
+<header>
+  <nav class="cf" ng-include="'views/nav.html'"></nav>
+</header>
+-->
 
 <ion-nav-bar class="bar-dark" align-title="center">  <!--align-title zum zentrieren des Titels-->
   <ion-nav-back-button></ion-nav-back-button>
