hide modules list on logged out

--- a/www/wikitude-worlds/D90-exchange-lense/index.html
+++ b/www/wikitude-worlds/D90-exchange-lense/index.html
@@ -18,6 +18,6 @@
 
     <script src="js/imagerecognitionand3d.js"></script>
 
-    <div id="start" class="button">start animation</div>
+    <span id="start" class="button">start animation</span>
 </body>
 </html>
