started template for learning modules and nav bar styling in the AR view

--- a/www/wikitude-worlds/D90-exchange-lense/index.html
+++ b/www/wikitude-worlds/D90-exchange-lense/index.html
@@ -8,10 +8,10 @@
   <title></title>
 
   <script src="architect://architect.js"></script>
-  <script type="text/javascript" src="../ade.js"></script>
-  <link rel="stylesheet" href="../AR-css/default.css">
+  <script type="text/javascript" src="../common-assets/ade.js"></script>
+  <link rel="stylesheet" href="../common-assets/css/default.css">
   <script src="js/imagerecognitionand3d.js"></script>
-  <!--<script src="../AR-js/all-views.js"></script>-->
+  <script src="../common-assets/js/all-views.js"></script>
 </head>
 
 
@@ -22,19 +22,18 @@
 
   <div id="backbtn">
     <a href='javascript: World.closeScreen();'>
-      <img src="../AR-View-assets/ios-arrow-back.svg" style="max-width: 50px; max-height: 50px;"/>
+      <img src="../common-assets/UI-assets/ios-arrow-back.svg" style="max-width: 50px; max-height: 50px;"/>
     </a>
   </div>
 
   <div id="helpbtn">
     <a href="javascript: World.showHelp();">
-      <img class="helppic" src="../AR-View-assets/ios-help-outline.svg"/>
+      <img class="helppic" src="../common-assets/UI-assets/ios-help-outline.svg"/>
     </a>
   </div>
 
+  <div id="help" style="display: none">Hold your camera steady and point it at one of our Smart Posters.</div>
 </nav>
-<div id="help" style="display: none">Hold your camera steady and point it at one of our Smart Posters.</div>
-<!--Here comes the help-->
 
 </body>
 </html>
