--- a/www/wikitude-worlds/myFirstARWorld/index.html
+++ b/www/wikitude-worlds/myFirstARWorld/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta content="width=device-width,initial-scale=1,maximum-scale=5,user-scalable=yes" name="viewport">
 
-  <title></title>
+  <title>AR View</title>
 
   <script src="architect://architect.js"></script>
   <script type="text/javascript" src="../common-assets/ade.js"></script>
@@ -18,18 +18,18 @@
 
 <body>
 
-<nav class="bar bar-header bar-positive">
+<nav id="nav" class="bar bar-header bar-positive">
+
   <button onclick="World.closeScreen()" id="backbtn" class=" navbutton button button-icon icon ion-ios-arrow-back"></button>
   <h1 id="loadingMessage" class="title">Loading ...</h1>
   <h1 id="title" class="title">Title</h1>
-
-  <button onclick="World.showHelp()" id="helpbtn"
-          class=" navbutton button button-icon icon ion-ios-help-outline">
-  </button>
-
+  <a onclick="World.showHelp()">
+  <button id="helpbtn" class="navbutton button button-icon icon ion-ios-help-outline"></button>
+</a>
   <div id="help" class="bar bar-subheader" style="display: none">
     <h2 class="title item-text-wrap">Hold your device steady and point it at the camera tracker.</h2>
   </div>
+
 </nav>
 
 </body>
