add footer and buttons to the template myFirstArWorld, common assets styling

--- a/www/wikitude-worlds/_LearningModuleTemplate/index.html
+++ b/www/wikitude-worlds/_LearningModuleTemplate/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/default.css">
 </head>
 <script src="js/GamesPostersView.js"></script>
-<script type="text/javascript" src="js/closescreen.js"></script>
+<script type="text/javascript" src="../common-assets/js/all-views.js"></script>
 
 <body>
 
