--- a/www/wikitude-worlds/myFirstARWorld/index.html
+++ b/www/wikitude-worlds/myFirstARWorld/index.html
@@ -6,32 +6,57 @@
   <meta content="width=device-width,initial-scale=1,maximum-scale=5,user-scalable=yes" name="viewport">
 
   <title>AR View</title>
-
+  <!--Wikitude Architecture-->
   <script src="architect://architect.js"></script>
   <script type="text/javascript" src="../common-assets/ade.js"></script>
-
+  <!--CSS-->
   <link rel="stylesheet" href="../../css/ionic.app.min.css">
   <link rel="stylesheet" href="../common-assets/css/default.css">
-</head>
-<script src="js/GamesPostersView.js"></script>
-<script type="text/javascript" src="../common-assets/js/closescreen.js"></script>
+  <!--JS-->
+  <script src="js/GamesPostersView.js"></script>
+  <!--<script src="../D90-exchange-lense/js/imagerecognitionand3d.js"></script>-->
 
+  <script type="text/javascript" src="../common-assets/js/all-views.js"></script>
+</head>
 <body>
 
+<!--Navigationsbar-->
 <nav id="nav" class="bar bar-header bar-energized">
+  <!--Nav Menu Back Button Left -->
+  <button id="backbtn"
+          class=" navbutton button button-icon icon ion-ios-arrow-back"
+          onclick="World.closeScreen()" ></button>
 
-  <button onclick="World.closeScreen()" id="backbtn"
-          class=" navbutton button button-icon icon ion-ios-arrow-back"></button>
   <h1 id="loadingMessage" class="title">Loading ...</h1>
   <h1 id="title" class="title">Title</h1>
 
-  <button onclick="World.showHelp()" id="helpbtn"
-          class="navbutton button button-icon icon ion-ios-help-outline"></button>
+  <!--Nav Menu Back Button Right -->
+  <button id="helpbtn"
+          class="navbutton button button-icon icon ion-ios-help-outline"
+          onclick="World.showHelp()"></button>
 
-  <div id="help" class="bar bar-subheader" style="display: none">
+  <!--Help Container-->
+    <div id="help" class="bar bar-subheader" style="display: none">
     <h2 id="helptitle" class="title">Hold your device steady and point it at the camera tracker.</h2>
   </div>
+</nav><!--Navigationsbar Ende-->
 
+<!--footer navbar-->
+<nav class="footer bar bar-footer bar-energized"
+  style="bottom: 0;  width: 100%">
+
+  <button id="placeholderbtn"
+          class="button button-icon ion-android-settings button-clear"
+          onclick="World.nextStep()"></button>
+  <button id="backward"
+          class="button button-icon ion-skip-backward "
+          onclick="World.nextStep()"></button>
+  <button id="forward"
+          class="button button-icon ion-skip-forward "
+          onclick="World.nextStep()"></button>
+  <button id="nextstep"
+          class="button button-icon ion-play"
+          onclick="World.nextStep()"></button>
 </nav>
 
 </body>
