--- a/www/wikitude-worlds/GamesPostersView/index.html
+++ b/www/wikitude-worlds/GamesPostersView/index.html
@@ -7,13 +7,13 @@
 
   <title></title>
 
-  <script src="architect://architect.js"></script>
+  <script src="https://www.wikitude.com/libs/architect.js"></script>
   <script type="text/javascript" src="../common-assets/ade.js"></script>
 
   <link rel="stylesheet" href="css/default.css">
 </head>
 <script src="js/GamesPostersView.js"></script>
-<script type="text/javascript" src="../common-assets/js/closescreen.js"></script>
+<script type="text/javascript" src="../common-assets/js/all-views.js"></script>
 
 <body>
 
