--- a/www/wikitude-worlds/myFirstARWorld/index.html
+++ b/www/wikitude-worlds/myFirstARWorld/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta content="width=device-width,initial-scale=1,maximum-scale=5,user-scalable=yes" name="viewport">
 
   <title>AR View</title>
   <!--Wikitude Architecture-->
-  <script src="architect://architect.js"></script>
+  <script src="https://www.wikitude.com/libs/architect.js"></script>
   <script type="text/javascript" src="../common-assets/ade.js"></script>
   <!--CSS-->
   <link rel="stylesheet" href="../../css/ionic.app.min.css">
   <link rel="stylesheet" href="../common-assets/css/default.css">
   <!--JS-->
-  <script src="js/GamesPostersView.js"></script>
-  <!--<script src="../D90-exchange-lense/js/imagerecognitionand3d.js"></script>-->
-
+  <script type="text/javascript" src="js/GamesPostersView.js"></script>
   <script type="text/javascript" src="../common-assets/js/all-views.js"></script>
 </head>
 <body>
@@ -24,8 +21,12 @@
 <nav id="nav" class="bar bar-header bar-energized">
   <!--Nav Menu Back Button Left -->
   <button id="backbtn"
-          class=" navbutton button button-icon icon ion-ios-arrow-back"
-          onclick="World.closeScreen()" ></button>
+          class=" button button-icon ion-ios-arrow-back"
+          onclick="World.closeScreen()"></button>
+
+ <!--   <button id="settingsbtn"
+            class="button button-icon ion-android-settings "
+            onclick="World.showARNavBar()"></button>-->
 
   <h1 id="loadingMessage" class="title">Loading ...</h1>
   <h1 id="title" class="title">Title</h1>
@@ -36,27 +37,25 @@
           onclick="World.showHelp()"></button>
 
   <!--Help Container-->
-    <div id="help" class="bar bar-subheader" style="display: none">
+  <div id="helpDiv" class="bar bar-subheader" style="display: none">
     <h2 id="helptitle" class="title">Hold your device steady and point it at the camera tracker.</h2>
   </div>
 </nav><!--Navigationsbar Ende-->
 
 <!--footer navbar-->
-<nav class="footer bar bar-footer bar-energized"
-  style="bottom: 0;  width: 100%">
+<nav id="arnavbar"
+     class="footer bar bar-footer bar-energized"
+     style="bottom: 0;  width: 100%">
 
-  <button id="placeholderbtn"
-          class="button button-icon ion-android-settings button-clear"
-          onclick="World.nextStep()"></button>
   <button id="backward"
           class="button button-icon ion-skip-backward "
-          onclick="World.nextStep()"></button>
+          onclick="World.formerStep()"></button>
   <button id="forward"
           class="button button-icon ion-skip-forward "
           onclick="World.nextStep()"></button>
   <button id="nextstep"
           class="button button-icon ion-play"
-          onclick="World.nextStep()"></button>
+          onclick="World.startAnimation()"></button>
 </nav>
 
 </body>
