--- a/www/wikitude-worlds/D90-exchange-lense/index.html
+++ b/www/wikitude-worlds/D90-exchange-lense/index.html
@@ -14,9 +14,9 @@
   <link rel="stylesheet" href="../../css/ionic.app.min.css">
   <link rel="stylesheet" href="../common-assets/css/default.css">
   <!--JS-->
-  <script src="js/imagerecognitionand3d.js"></script>
-  <script type="text/javascript" src="../common-assets/js/all-views.js"></script>
 </head>
+<script src="js/imagerecognitionand3d.js"></script>
+<script type="text/javascript" src="../common-assets/js/all-views.js"></script>
 <body>
 
 <!--Navigationsbar-->
@@ -24,7 +24,7 @@
   <!--Nav Menu Back Button Left -->
   <button id="backbtn"
           class=" navbutton button button-icon icon ion-ios-arrow-back"
-          onclick="World.closeScreen()" ></button>
+          onclick="UIController.closeScreen()" ></button>
 
   <h1 id="loadingMessage" class="title">Loading ...</h1>
   <h1 id="title" class="title">D90 Exchanging the camera</h1>
@@ -32,10 +32,10 @@
   <!--Nav Menu Back Button Right -->
   <button id="helpbtn"
           class="navbutton button button-icon icon ion-ios-help-outline"
-          onclick="World.showHelp()"></button>
+          onclick="UIController.showHelp()"></button>
 
   <!--Help Container-->
-  <div id="help" class="bar bar-subheader" style="display: none">
+  <div id="helpDiv" class="bar bar-subheader" style="display: none">
     <h2 id="helptitle" class="title">Hold your device steady and point it at the camera tracker.</h2>
   </div>
 </nav><!--Navigationsbar Ende-->
@@ -47,16 +47,16 @@
 
   <button id="placeholderbtn"
           class="button button-icon ion-android-settings button-clear"
-          onclick="World.nextStep()"></button>
+          onclick="UIController.nextStep()"></button>
   <button id="backward"
           class="button button-icon ion-skip-backward "
-          onclick="World.nextStep()"></button>
+          onclick="UIController.nextStep()"></button>
   <button id="forward"
           class="button button-icon ion-skip-forward "
-          onclick="World.nextStep()"></button>
+          onclick="UIController.nextStep()"></button>
   <button id="nextstep"
           class="button button-icon ion-play"
-          onclick="World.nextStep()"></button>
+          onclick="UIController.nextStep()"></button>
 </nav>
 -->
 
