commit vor cleanup

--- a/www/wikitude-worlds/D90-exchange-lense/index.html
+++ b/www/wikitude-worlds/D90-exchange-lense/index.html
@@ -41,7 +41,7 @@
 </nav><!--Navigationsbar Ende-->
 
 <!--footer navbar-->
-
+<!--
 <nav class="footer bar bar-footer bar-energized"
      style="bottom: 0;  width: 100%">
 
@@ -57,7 +57,7 @@
   <button id="nextstep"
           class="button button-icon ion-play"
           onclick="UIController.nextStep()"></button>
-</nav>
+</nav>-->
 
 
 </body>
