--- a/www/wikitude-worlds/D90-exchange-lense/index.html
+++ b/www/wikitude-worlds/D90-exchange-lense/index.html
@@ -36,7 +36,7 @@
 
   <!--Help Container-->
   <div id="helpDiv" class="bar bar-subheader" style="display: none">
-    <h2 id="helptitle" class="title">Hold your device steady and point it at the camera tracker.</h2>
+    <h2 id="helptitle" class="title item item-text-wrap">Hold your device steady and point it at the camera tracker.</h2>
   </div>
 </nav><!--Navigationsbar Ende-->
 
